# omniui

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-TW.md  ROADMAP.md  ROADMAP.zh-TW.md  conftest.py  pom.xml  pyproject.toml
.github/workflows/: ci-integration.yml  ci-unit.yml
contracts/agent/: action.request.json  action.response.json  discover.request.json  discover.response.json  health.response.json  screenshot.request.json  screenshot.response.json  session.create.request.json  session.create.response.json
demo/: README.md  README.zh-TW.md  __init__.py
demo/java/: build-all.bat
demo/javafx-login-app/: README.md  README.zh-TW.md  pom.xml  run-dev-plain.bat  run-dev-plain.ps1  run-dev-plain.sh  run-dev-with-agent.bat  (+8 more)
docs/: architecture.md  architecture.zh-TW.md  comparison.md  comparison.zh-TW.md  headless.md  headless.zh-TW.md  html-report.md  html-report.zh-TW.md  index.md  index.zh-TW.md  manual-smoke.md  manual-smoke.zh-TW.md  parallel-testing.md  parallel-testing.zh-TW.md
java-agent/: README.md  README.zh-TW.md  pom.xml
omniui/: __init__.py  client.py  locator.py  page.py
scripts/: _gen_scripts.py  benchmark_phase1.py  build_demo_runtime.bat  build_demo_runtime.ps1  build_demo_runtime.sh  check_markdown_i18n.py  demo_login_flow.py  run_demo.py
tests/: conftest_parallel_example.py  test_agent_contracts.py  test_benchmark.py  test_client.py  test_demo_advanced.py  test_demo_launchers.py  test_demo_run_all.py  test_demo_runtime.py  test_demo_script.py  test_markdown_i18n.py  test_models_and_exports.py  test_page_object.py  test_recorder.py
(+685 files in other folders)
